# acc

./: .actrc  .dockerignore  .gitignore  .gitmodules  BNFC_STATUS.md  BUILD.md  DOCKER.md  Dockerfile  Makefile  README.md  TESTING.md  Taskfile.yaml  Taskfile.yml  build-all.sh  build.sh  clean.sh  convert-to-submodules.sh  dev.sh  docker-compose.yml  stack.yaml  submodule-guide.sh  test-workflow.sh  validate-workflows.sh
.github/workflows/: build-compilers.yml  test.yml
basic/: basic.cf
bf/: bf-compiler.cabal  bf.cf  build.sh  run.sh  stack.yaml
ini/: ini.cf
ini/test/: section.ini
json/: json.cf
json/test/: test.json
karel/: Makefile  README.md  build.sh  karel.cf
karel/doc/: const.js  constant.js  datatype.js  field_list.js  karel.bnf  program.js  routine_declaration.js  statement.js  structure_array_type.js  type.js  user_type.js  var.js
karel/test/: bar.kl
krl/: README.md  krl.cf
krl/test/: control.src  interrupt.src  io.src  motion.src  simple.src
tpe/: tplang.cf
urs/: urs.cf
whitespace/: README.md  build.sh  run.sh  whitespace.cf  ws-compiler.cabal
whitespace/src/: CodeGen.hs  Main.hs
whitespace/test/: calc.ws  hello.ws  hello_world.ws  hello_world.wsa  simple.ws
