name:                ws-compiler
version:             0.1.0.0
synopsis:            Whitespace to LLVM compiler
description:         A Whitespace compiler that generates LLVM IR
homepage:            https://github.com/yourusername/acc
license:             MIT
author:              Anton Feldmann
maintainer:          anton.feldmann@example.com
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10

executable wsc
  main-is:             Main.hs
  other-modules:       AbsWhitespace
                     , LexWhitespace
                     , ParWhitespace
                     , PrintWhitespace
                     , SkelWhitespace
                     , ErrM
                     , CodeGen
                     , LLVM
  build-depends:       base >=4.7 && <5
                     , llvm-hs >= 9.0 && < 10
                     , llvm-hs-pure >= 9.0 && < 10
                     , llvm-hs-pretty >= 0.9
                     , mtl >= 2.2
                     , bytestring >= 0.10
                     , containers >= 0.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
